# miden-counter-contract-test

counter-contract/: Cargo.toml  README.md  tests.sh
counter-contract/src/: lib.rs
counter-note/: Cargo.toml  tests.sh
counter-note/src/: lib.rs
