[package]
name = "counter-contract"
description = "A simple example of a Miden counter contract using the Account Storage API"
version = "0.1.0"
edition = "2021"

[lib]
# Build this crate as a self-contained, C-style dynamic library
# This is required to emit the proper Wasm module type
crate-type = ["cdylib"]

[dependencies]
miden = { git = "https://github.com/0xMiden/compiler" }
miden-harness-macros  = { path = "/Users/fabri/Repositories/miden-custom-test/crates/test-macros" }

[dev-dependencies]
miden-harness-lib  = { path = "/Users/fabri/Repositories/miden-custom-test/crates/test-lib" }
miden-mast-package = "0.19.1"
winter-utils = "0.13.1"

[package.metadata.component]
package = "miden:counter-contract"

[package.metadata.miden]
project-kind = "account"
supported-types = ["RegularAccountUpdatableCode"]

[[test]]
name = "lib"
path = "src/lib.rs"
harness = false
